--- a/pom.xml
+++ b/pom.xml
@@ -81,10 +81,29 @@
             <version>2.11.0</version>
         </dependency>
 
+        <!-- https://github.com/detro/ghostdriver -->
+        <dependency>
+            <groupId>com.github.detro</groupId>
+            <artifactId>ghostdriver</artifactId>
+            <version>2.1.0</version>
+        </dependency>
 
-
+        <!-- https://github.com/seleniumhq/htmlunit-driver -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>htmlunit-driver</artifactId>
+            <version>2.33.0</version>
+        </dependency>
 
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
 
 
     <build>
